2006-01-02  Mikael Hallendal  <micke@imendio.com>

	* MAINTAINERS: Added

2005-08-16  Mikael Hallendal  <micke@imendio.com>

	* NEWS:
	* configure.in:
	- Release 1.0.1

	* loudmouth/lm-connection.c: (connection_free):
	- Unref context if it is set.

2005-08-14  Mikael Hallendal  <micke@imendio.com>

	* NEWS:
	* configure.in:
	- Version 1.0, yiiiha!

2005-08-12  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (_lm_connection_failed_with_error):
	- Set state to LM_CONNECTION_STATE_CLOSED if we failed to connect.
	- Fixes LM-8.

2005-08-12  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c:
	(lm_connection_authenticate_and_block):
	- Set state correctly.
	- Fixes LM-7.
	(lm_connection_send_with_reply_and_block):
	- Check that connection is open before using it.
	- Fixes LM-6.

2005-07-30  Mikael Hallendal  <micke@imendio.com>

	* autogen.sh:
	* configure.in:
	* loudmouth/lm-connection.c: (connection_add_watch):
	- Gtk-doc fixes.

2005-07-09  Martyn Russell  <mr@gnome.org>

	* loudmouth/lm-connection.c (lm_connection_set_ssl): 
	- Error when trying to set up SSL knowing it is not supported.

2005-05-17  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-ssl.c: 
	* loudmouth/lm-connection.c:
	* loudmouth/lm-proxy.c:
	- Fixed some gcc 4.0 warnings.
	* loudmouth/lm-ssl.[ch]: Made the API more consistent.
	* examples/test-lm.c: Fixed some gcc 4.0 warnings.
	
2005-05-13  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-ssl.c: (_lm_ssl_read):
	- Try to fix LM-3 for real this time.

2005-05-08  Mikael Hallendal  <micke@imendio.com>

	* Release 0.90

	* NEWS:
	* configure.in:
	- Updated for 0.90

2005-05-05  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: 
	(_lm_connection_succeeded):
	- Don't unref io_channel here as well, already done in do_close.
	- Fixes LM-5, reported by Daniel Lavalliere.
	(connection_do_close):
	- Set fd to -1 to be sure it's not used again.
